tests/snapshots/examples_fixtures/type_classes__SuperclassMetadata.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/SuperclassMetadata.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
