tests/snapshots/examples_fixtures/type_classes__TypeclassMetadata.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/TypeclassMetadata.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
