tests/snapshots/examples_fixtures/type_classes__array_instances.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/array_instances.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
