tests/snapshots/examples_fixtures/type_classes__associated_type_declaration.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/associated_type_declaration.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
