tests/snapshots/examples_fixtures/type_classes__associated_type_interface_roundtrip.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/associated_type_interface_roundtrip.flx
== compile ==
failed (compile)
== diagnostics ==
error[E421]: Unknown Member in Exposing

`first_of` is not defined in module `AssociatedTypeAcrossModules.Collect`.

  examples/type_classes/associated_type_interface_roundtrip.flx:19:1
   |
19 | import AssociatedTypeAcrossModules.Collect exposing (first_of)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Check the public members of `AssociatedTypeAcrossModules.Collect` or remove `first_of` from the exposing list.
== stdout ==
<not executed>
