tests/snapshots/examples_fixtures/type_classes__associated_type_reduction.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/associated_type_reduction.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
