tests/snapshots/examples_fixtures/type_classes__contextual_dictionary_wrapper.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/contextual_dictionary_wrapper.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
