tests/snapshots/examples_fixtures/type_classes__contextual_superclass_evidence.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/contextual_superclass_evidence.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
