tests/snapshots/examples_fixtures/type_classes__derived_decode.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
assertion_line: 39
---
Fixture: examples/type_classes/derived_decode.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
